Adapt text to Mann-Whitney test results

--- a/Results.tex
+++ b/Results.tex
@@ -18,7 +18,7 @@ Using the time-lapse data, we built histograms of RecB spot lifetimes at the dif
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.9\textwidth]{Figures/Fig2_RecB_lifetime.pdf}
-    \caption{RecB spot lifetimes under ciprofloxacin exposure. \textbf{(A)} Example kymographs (2-sec interval, 100 sec total) of cells containing short- and long-lived RecB spots. \textbf{(B)} RecB spot lifetime histograms at 0, 3, 10, 20 and 30 ng/ml ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components shown as dashed lines). \ncells{66,764}. \nspots{170,138}. \textbf{(C)} Proportion of long-lived RecB spots as a function of ciprofloxacin concentration for wild-type (WT) cells. Violin plots show single-cell distributions, box plots show the median and interquartile range. Statistically significant differences to the WT, no ciprofloxacin condition (Tukey's HSD test) are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001 \ncells{66,764}. \nspots{170,138}. \textbf{(D)} Scheme of RecBCD bound by the Gam protein of phage $\lambda$ (subunits S1 and S2). \textbf{(E)} RecB spot lifetime histograms (bars) for cells over-expressing the Gam protein, fitted with a bi-exponential decay model (black line, fit components shown as dashed lines). \ncells{8,812}. \nspots{18,698}. \textbf{(F)} Proportion of long-lived RecB spots as a function of ciprofloxacin concentration for cells over-expressing the Gam protein. Violin plots show single-cell distributions, box plots show the median and interquartile range. Statistically significant differences to the WT, no ciprofloxacin condition (Tukey's HSD test) are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001 \ncells{8,812}. \nspots{18,698}.}
+    \caption{RecB spot lifetimes under ciprofloxacin exposure. \textbf{(A)} Example kymographs (2-sec interval, 100 sec total) of cells containing short- and long-lived RecB spots. \textbf{(B)} RecB spot lifetime histograms at 0, 3, 10, 20 and 30 ng/ml ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components shown as dashed lines). \ncells{66,764}. \nspots{170,138}. \textbf{(C)} Proportion of long-lived RecB spots as a function of ciprofloxacin concentration for wild-type (WT) cells. Violin plots show single-cell distributions, box plots show the median and interquartile range. Statistically significant differences to the WT, no ciprofloxacin condition (Mann-Whitney test) are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001 \ncells{66,764}. \nspots{170,138}. \textbf{(D)} Scheme of RecBCD bound by the Gam protein of phage $\lambda$ (subunits S1 and S2). \textbf{(E)} RecB spot lifetime histograms (bars) for cells over-expressing the Gam protein, fitted with a bi-exponential decay model (black line, fit components shown as dashed lines). \ncells{8,812}. \nspots{18,698}. \textbf{(F)} Proportion of long-lived RecB spots as a function of ciprofloxacin concentration for cells over-expressing the Gam protein. Violin plots show single-cell distributions, box plots show the median and interquartile range. Statistically significant differences to the WT, no ciprofloxacin condition (Mann-Whitney test) are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001 \ncells{8,812}. \nspots{18,698}.}
     \label{Fig:lifetimes}
 \end{figure*}
 
@@ -37,15 +37,15 @@ Since the duration of the RecB-DSB interaction was unaffected by the amount of D
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=.48\textwidth]{Figures/Fig3_RecB_recruitment.pdf}
-    \caption{RecB binding to DSBs. \textbf{(A)} Lifetime of DSB-bound RecB in wild-type (WT) cells, and in the \dreca\ and \geneteneighty\ mutants. Statistically significant differences are shown relative to wild-type cells exposed to 30 ng/ml ciprofloxacin. \ncells{}. \nspots{}. \textbf{(B)} Recruitment rate of RecB to DSBs per cell at different ciprofloxacin concentrations. Statistically significant differences are shown relative to the no ciprofloxacin condition. \ncells{66,764}. \nspots{170,138}. \textbf{(C)} Recruitment rate of RecB to DSBs per cell for the \dreca\ and \geneteneighty\ mutants. \ncells{23,540}. \nspots{99,891}. For all panels, violin plots show single-cell distributions, box plots show the median and interquartile range. p-values from Tukey's HSD test are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001}
+    \caption{RecB binding to DSBs. \textbf{(A)} Lifetime of DSB-bound RecB in wild-type (WT) cells, and in the \dreca\ and \geneteneighty\ mutants. Statistically significant differences are shown relative to wild-type cells exposed to 30 ng/ml ciprofloxacin. \ncells{}. \nspots{}. \textbf{(B)} Recruitment rate of RecB to DSBs per cell at different ciprofloxacin concentrations. Statistically significant differences are shown relative to the no ciprofloxacin condition. \ncells{66,764}. \nspots{170,138}. \textbf{(C)} Recruitment rate of RecB to DSBs per cell for the \dreca\ and \geneteneighty\ mutants. \ncells{23,540}. \nspots{99,891}. For all panels, violin plots show single-cell distributions, box plots show the median and interquartile range. p-values from a Mann-Whitney test are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001}
     \label{Fig:recruitment}
 \end{figure}
 
 % RecB recruitment in WT
-Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DSBs, the rate of appearance of spots can be used to estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per unit of time. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, we could calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}B). We estimated that 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour in the absence of ciprofloxacin. As expected, the recruitment rate of RecB increased with ciprofloxacin concentration, although we detected a statistically significant change only for the highest concentration (8.2 $\pm$ 3.6 RecB recruited to DSBs per hour at 30 ng/ml).
+Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DSBs, the rate of appearance of spots can be used to estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per unit of time. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, we could calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}B). We estimated that 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour in the absence of ciprofloxacin. As expected, the recruitment rate of RecB increased with ciprofloxacin concentration, up to 8.2 $\pm$ 3.6 RecB recruited to DSBs per hour at 30 ng/ml ciprofloxacin.
 
 % RecB recruitment in mutants
-In the \dreca\ and \geneteneighty\ mutants, the rate of initial DSB formation is expected to be the same as in the wild-type, as these mutations only affect the repair process once DSBs are present. Surprisingly, the rate of recruitment of RecB to DSBs in the \dreca\ mutant in the presence of 30 ng/ml ciprofloxacin was higher than in the wild-type (Figure \ref{Fig:recruitment}C) GIVE NUMBER. We hypothesise that this higher rate of RecB recruitment to DSBs is a result of multiple recruitment events on the same original DSB that cannot be repaired because of the absence of RecA as was previously reported \cite{Capaldo1975,Skarstad1993}. In the \geneteneighty\ mutant, RecB recruitment is equivalent to WT cells (Figure \ref{Fig:recruitment}C). This might reflect the ability of the \geneteneighty\ mutant to repair DSBs albeit with lower efficiency than wild-type cells (see Discussion).
+In the \dreca\ and \geneteneighty\ mutants, the rate of initial DSB formation is expected to be the same as in the wild-type, as these mutations only affect the repair process once DSBs are present. Surprisingly, the rate of recruitment of RecB to DSBs in the \dreca\ mutant was higher than in the wild-type both in the absence (1.6 $\pm$ 1.1 to 8.3 $\pm$ 2.8) and the presence (10.8 $\pm$ 4.3 to 28.8 $\pm$ 9.5) of ciprofloxacin (Figure \ref{Fig:recruitment}C). We hypothesise that this higher rate of RecB recruitment to DSBs is a result of multiple recruitment events on the same original DSB that cannot be repaired because of the absence of RecA as was previously reported \cite{Capaldo1975,Skarstad1993}. In the \geneteneighty\ mutant, RecB recruitment was higher than in the wild-type in the absence of ciprofloxacin (1.6 $\pm$ 1.1 to 8.5 $\pm$ 1.7), and equivalent to WT cells in the presence of ciprofloxacin (Figure \ref{Fig:recruitment}C). This might reflect the ability of the \geneteneighty\ mutant to repair DSBs albeit with lower efficiency than wild-type cells (see Discussion).
 
 % Part 3: Imaging RecA foci and filaments
 \subsection*{Ciprofloxacin exposure induces formation of RecA filaments}
