Edits by Meriem

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,21 +1,21 @@
 \section*{Introduction}
 % RecBCD biochemistry
-Repairing DNA damage and ensuring integrity of the genome is essential to all living organisms. Among the different types of damage, DNA double-strand breaks (DSBs) pose a serious threat to bacterial cells: when left unrepaired, they can lead to cell death, genome rearrangements or mutagenesis \cite{Wyman2006}. In \ecoli, DSBs are repaired through the RecBCD pathway. RecBCD is a heterotrimeric protein complex, which combines several enzymatic activities \cite{Dillingham2008}. Upon recognition of a DSB, RecBCD translocates along the DNA at a speed of $\sim$1.6 kb/s \cite{Wiktor2018}, and digests both DNA strands until it recognises a specific 8-base pair sequence (5'-GCTGGTGG-3') called a Chi-site. RecBCD then stops degrading the 3' end, leading to the formation of a 3'-OH DNA overhang. Chi recognition by RecBCD has been previously reported to occur with $\sim$40\% probability \cite{Taylor1992,Cockram2015}. As RecBCD creates the 3' overhang, the RecB subunit promotes loading of the RecA protein onto single-stranded DNA (ssDNA) \cite{Churchill2000, Spies2006}. The resulting RecA-DNA nucleoprotein filament is used as a template to search for an intact homologous sequence and perform homologous recombination \cite{Wyman2004,Wiktor2021}. It has been suggested that RecBCD dissociates from DNA by disassembly of the three subunits following Chi recognition \cite{Taylor1999}; however, it is still unclear what specifically triggers the dissociation and how long RecBCD stays bound to DNA before dissociating.
+Repairing DNA damage and ensuring the integrity of the genome is essential to all living organisms. Among the different types of damage, DNA double-strand breaks (DSBs) pose a serious threat to bacterial cells: when left unrepaired, they can lead to cell death, genome rearrangements or mutagenesis \cite{Wyman2006}. In \ecoli, DSBs are repaired through the RecBCD pathway. RecBCD is a heterotrimeric protein complex, which combines several enzymatic activities \cite{Dillingham2008}. Upon recognition of a DSB, RecBCD translocates along the DNA at a speed of $\sim$1.6 kb/s \cite{Wiktor2018}, and digests both DNA strands until it recognises a specific 8-base pair sequence (5'-GCTGGTGG-3') called a Chi-site. RecBCD then stops degrading the 3' end, leading to the formation of a 3'-OH DNA overhang. Chi recognition by RecBCD has been previously reported to occur with $\sim$40\% probability \cite{Taylor1992,Cockram2015}. As RecBCD creates the 3' overhang, the RecB subunit promotes loading of the RecA protein onto single-stranded DNA (ssDNA) \cite{Churchill2000, Spies2006}. The resulting RecA-DNA nucleoprotein filament is used as a template to search for an intact homologous sequence and perform homologous recombination \cite{Wyman2004,Wiktor2021}. It has been suggested that RecBCD dissociates from DNA by disassembly of the three subunits following Chi recognition \cite{Taylor1999}; however, it is still unclear what specifically triggers the dissociation and how long RecBCD stays bound to DNA before dissociating.
 
 % Endogenous DSBs
 A common source of DSBs in \ecoli\ is the collision of the replication fork with DNA-bound proteins, which leads to the disassembly of the replisome \cite{Michel1997}. It has been reported that $\sim$18\% of cells undergo endogenous DNA damage per cell cycle, most likely from replication fork breakage \cite{Sinha2018}. Replisome disassembly results in a Y-shaped DNA structure that is bound by the RuvAB complex, which pulls the DNA strands (in a process called "branch migration") to create a "chicken-foot" four-way DNA structure \cite{Seigneur1998}. The free end of this structure is a DNA double strand end, and is bound by RecBCD, which either (i) digests the whole DNA tail and displaces RuvAB, allowing the replisome to be re-loaded in a PriA-dependent manner \cite{Seigneur1998}, or (ii) recognises a Chi-site and loads the RecA protein onto the 3' end of the DNA tail, leading to SOS induction \cite{Michel2001}. Since this part of the chromosome was recently replicated, a homologous sequence is likely to be present in close proximity, and can be used for homologous recombination.
 
 % Exogenous DSBs (ciprofloxacin)
-\ecoli\ cells might also experience DSBs from exo\-genous sources, such as anti\-biotics. Ciprofloxacin is an antibiotic of the fluoro\-quinolones family, which causes DSBs. In \ecoli, it does so by binding covalently to the topoisomerase II DNA gyrase (and with lower affinity to topoisomerase IV), and trapping it in a DNA-bound conformation \cite{Kohanski2010}. The exact mechanism through which DSBs are created is still partially unclear, but ciprofloxacin has been suggested to cause replication-dependent and independent DSBs \cite{Ojkic2020}. Since poisoned gyrase is closely bound to DNA, it is likely to cause replication fork collisions \cite{Wentzell2000, Drlica2008}, and the subsequent formation of a chicken foot structure. Furthermore, the ciprofloxacin-poisoned gyrase is trapped in the "open" stage of its catalytic cycle, where it holds together two disjointed DNA ends. Therefore, after gyrase removal through a process that involves ExoVII nuclease \cite{Huang2021}, it can be reasonably expected that a DSB is formed independently of DNA replication \cite{Zhao2006}.
+\ecoli\ cells might also experience DSBs from exo\-genous sources, such as anti\-biotics. Ciprofloxacin is an antibiotic of the fluoro\-quinolones family, which causes DSBs. In \ecoli, it does so by binding covalently to the topoisomerase II DNA gyrase (and with lower affinity to topoisomerase IV), and trapping it in a DNA-bound conformation \cite{Kohanski2010}. The exact mechanism through which DSBs are created is still partially unclear, but ciprofloxacin has been suggested to cause replication-dependent and independent DSBs \cite{Ojkic2020}. Since poisoned gyrase is closely bound to DNA, it is likely to cause replication fork collisions \cite{Wentzell2000, Drlica2008}, and the subsequent formation of a chicken foot structure. Furthermore, the ciprofloxacin-poisoned gyrase is trapped in the "open" stage of its catalytic cycle, where it holds together two disjointed DNA ends. Therefore, after gyrase removal through a process that involves ExoVII nuclease \cite{Huang2021}, it is expected that a DSB might formed independently of DNA replication \cite{Zhao2006}.
 
 % General response to DNA damage (SOS and nucleoid compaction)
 DSB repair is the first step of a general response to DNA damage known as the SOS response \cite{Baharoglu2014}. The formation of the RecA nucleoprotein filament triggers the auto-proteolysis of the LexA transcriptional repressor, which results in the activation of the genes of the SOS regulon. Among those are RecA itself, inhibitors of cell division such as SulA, and the SMC (Structural Maintenance of Chromosomes)-like protein RecN. As a result, the cells elongate \cite{Bos2015}, and their DNA is compacted at the cell centre \cite{Odsbu2014}.
 
 % RecB/RecA mutants
-Mutations in proteins of the repair pathway have varying effects on the cell's ability to repair DSBs. Cells that are \emph{recA}-deficient (\dreca) are entirely unable to repair DSBs through homologous recombination, and the prolonged action of RecBCD on the DNA results in the digestion of large parts of the chromosome \cite{Horii1968, Chow2007}. \emph{recA}-deficient cells are, however, capable of processing DSBs arising from fork reversal, thanks to RecBCD's exonuclease activity \cite{Seigneur1998, Michel2001}. This enables \emph{recA}-deficient cells to repair replication-induced DNA damage efficiently, resulting in a growth rate in the absence of DNA damage close to that of wild-type cells (REF?). The $D_{1080} \rightarrow A$ point mutation in the RecB subunit of the RecBCD complex (\teneighty) abolishes RecB's nuclease activity, as well as its ability to load the RecA protein on DNA \cite{Yu1998, Wang2000}. The other activities of the complex (DSB recognition, DNA unwinding, Chi-recognition) are unaffected \cite{Anderson1999}. Despite the loss of its RecA loading activity, the \geneteneighty\ mutant is still able to repair DSBs. To do so, the \teneighty CD complex unwinds DNA at the break without degrading it, and the RecJ exonuclease degrades the 5' ssDNA. Finally, the RecFOR complex loads RecA, allowing for homologous recombination to occur \cite{Ivancic-Bace_2003}.
+Mutations in proteins of the repair pathway have varying effects on the cell's ability to repair DSBs. Cells that are \emph{recA}-deficient (\dreca) are entirely unable to repair DSBs through homologous recombination, and the prolonged action of RecBCD on the DNA results in the digestion of large parts of the chromosome \cite{Horii1968, Chow2007}. \emph{recA}-deficient cells are, however, capable of processing DSBs arising from fork reversal, thanks to RecBCD's exonuclease activity \cite{Seigneur1998, Michel2001}. This enables \emph{recA}-deficient cells to repair replication-induced DNA damage, resulting in a growth rate in the absence of DNA damage close to that of wild-type cells (REF?). The $D_{1080} \rightarrow A$ point mutation in the RecB subunit of the RecBCD complex (\teneighty) strongly reduces RecB's nuclease activity, as well as its ability to load the RecA protein on DNA \cite{Yu1998, Wang2000}. The other activities of the complex (DSB recognition, DNA unwinding, Chi-recognition) are unaffected \cite{Anderson1999}. Despite the loss of its RecA loading activity, the \geneteneighty\ mutant is still able to repair DSBs. To do so, the \teneighty CD complex unwinds DNA at the break without degrading it, and the RecJ exonuclease degrades the 5' ssDNA. Finally, the RecFOR complex loads RecA, allowing for homologous recombination to occur \cite{Ivancic-Bace_2003}.
 
 % Previous microscopy studies of DSB repair
-Previous microscopy studies have shed light on different aspects of DSB repair by RecBCD. Several \emph{in vitro} studies have quantified the rate of DNA unwinding by RecBCD \cite{Spies2003,Liu2013}, as well as the growth rate of RecA filaments \cite{Joo2006,Galletto2006,Handa2009} and the mechanism of homology search \cite{Forget2012,Ragunathan2012}. Complimentary to the \emph{in vitro} work, \emph{in vivo} studies have provided insight into DNA end resection by RecBCD \cite{Wiktor2018}, confirming its high translocation speed and processivity. More recently, we investigated RecB mobility \emph{in vivo} at the single-molecule level \cite{Lepore2023}, finding that RecB's engagement in repair initiation is proportional to the level of DNA damage and that its interactions with DNA are consistent with its role in initiating the repair process. The spatial organisation of RecA during DSB repair has been extensively characterised. Studies reported the presence of RecA foci \cite{Renzette2005,Renzette2007,Centore2007,Amarh2018}, filaments \cite{Kidane2005}, or bundles of filaments \cite{Lesterlin2013,Ghodke2019}. The homology search and pairing processes were also observed \emph{in vivo}, showing that chromosomes are brought to the centre of the cell during the repair process \cite{Badrinarayanan2015,Wiktor2021}. Our previous observations \cite{Lepore2023} highlighted how the coordination of all RecBCD activities facilitates rapid and efficient repair. Nevertheless, several important aspects of RecBCD's processing of DSBs \emph{in vivo} remain to be clarified: how long does RecBCD stay bound to DNA after recognising a DSB? Do the recruitment and binding pattern change under different levels of DNA damage? How does its spatio-temporal organisation change upon initiation of DNA damage? Does RecA play a role in triggering RecBCD dissociation from DNA? These open questions are fundamental to the complete understanding of DSB repair in \ecoli.
+Previous microscopy studies have shed light on different aspects of DSB repair by RecBCD. Several \emph{in vitro} studies have quantified the rate of DNA unwinding by RecBCD \cite{Spies2003,Liu2013}, as well as the growth rate of RecA filaments \cite{Joo2006,Galletto2006,Handa2009} and the mechanism of homology search \cite{Forget2012,Ragunathan2012}. Complementary to the \emph{in vitro} work, \emph{in vivo} studies have provided insight into DNA end resection by RecBCD \cite{Wiktor2018}, confirming its high translocation speed and processivity. More recently, we investigated RecB mobility \emph{in vivo} at the single-molecule level \cite{Lepore2023}, finding that RecB's engagement in repair initiation is proportional to the level of DNA damage and that its interactions with DNA are consistent with its role in initiating the repair process. The spatial organisation of RecA during DSB repair has been extensively characterised. Studies reported the presence of RecA foci \cite{Renzette2005,Renzette2007,Centore2007,Amarh2018}, filaments \cite{Kidane2005}, or bundles of filaments \cite{Lesterlin2013,Ghodke2019}. The homology search and pairing processes were also observed \emph{in vivo}, showing that chromosomes are brought to the centre of the cell during the repair process \cite{Badrinarayanan2015,Wiktor2021}. Our previous observations \cite{Lepore2023} highlighted how the coordination of all RecBCD activities facilitates rapid and efficient repair. Nevertheless, several important aspects of RecBCD's processing of DSBs \emph{in vivo} remain to be clarified: how long does RecBCD stay bound to DNA after recognising a DSB? Do the recruitment and binding pattern change under different levels of DNA damage? How does its spatio-temporal organisation change upon initiation of DNA damage? Does RecA play a role in triggering RecBCD dissociation from DNA? These open questions are fundamental to the complete understanding of DSB repair in \ecoli.
 
 % Overview of the article
-To address these questions, we used single-molecule imaging to quantify RecB binding to DSBs in living \ecoli\ cells exposed to ciprofloxacin. We measured the duration of the RecB-DSB interaction and found that it was not affected by the ciprofloxacin concentration within the tested range (0 to 30 ng/ml). Concurrent imaging of RecB and the bacterial nucleoid showed compaction of the bacterial nucleoid, which was associated with RecB's subsequent recruitment. Additional imaging of  RecA revealed structures similar to previously observed bundles which scaled with ciprofloxacin concentration and duration of exposure. Furthermore, we imaged RecB in the \dreca\ and \geneteneighty\ mutants, and revealed that RecB dissociation depends only on the intrinsic biochemical activities of the complex. These results reveal the importance of the intricate spatio-temporal coordination of the DSB repair machinery to ensure efficient repair in E. coli.
+To address these questions, we used single-molecule imaging to quantify RecB binding to DSBs in living \ecoli\ cells exposed to ciprofloxacin. We measured the duration of the RecB-DSB interaction and found that it was not affected by the concentration of ciprofloxacin. Concurrent imaging of RecB and the bacterial nucleoid showed compaction of the bacterial nucleoid, which was associated with RecB's subsequent recruitment to new DSBs. Additional imaging of  RecA revealed structures similar to previously observed bundles, which scaled with ciprofloxacin concentration and duration of exposure. Furthermore, we imaged RecB in the \dreca\ and \geneteneighty\ mutants, and revealed that RecB dissociation depends only on the intrinsic biochemical activities of the complex. These results reveal the importance of the intricate spatio-temporal coordination of the DSB repair machinery to ensure efficient repair in \ecoli.
