--- a/Methods.tex
+++ b/Methods.tex
@@ -8,11 +8,11 @@ MEK2623 (RecB-Halo RecA-SYFP2) was constructed by transferring a RecA-SYFP2 tand
 For all experiments, the cells were grown in M9 supplemented with 0.2\% (w/v) glucose, 2 mM MgSO$_4$, 0.1 mM CaCl$_2$, 1X MEM Essential and MEM non-essential amino acids (Gibco).
 \subsubsection*{Cell culture}
 Cells were grown overnight from a -80\celsius\ glycerol stock in 5 mL medium at 37\celsius, shaking at 150 rpm. In the morning, the cells were diluted 1:300 into 15 mL of medium and grown at 37\celsius, shaking at 150 rpm until they reached an \od\ of 0.2-0.3 (mid-exponential phase).
-Alternatively, a 15 mL culture was inoculated using a -80\celsius\ glycerol stock, and placed at 37\celsius\ with stirring in a turbidostat device (OGIBio), which measured \od\ and diluted cells at 3 min intervals, in order to keep them at a constant \od\ of 0.2.
+Alternatively, a 15 mL culture was inoculated using a -80\celsius\ glycerol stock, and placed at 37\celsius\ with stirring in a turbidostat device (OGIBio), which measured \od\ and diluted cells at 3 min intervals, to keep them at a constant \od\ of 0.2.
 \subsubsection*{Halo labelling}
-The same labelling protocol was used from a previous study \cite{Lepore2023}. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
+We used a labelling protocol similar to our previous study \cite{Lepore2023}. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
 \subsubsection*{DNA labelling}
-When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen, catalog number S7020) at a concentration of 500 nM, at the same time as the JF549 dye. It was incubated as described above.
+When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen, catalog number S7020) at a concentration of 500 nM, at the same time as the JF549 dye using similar incubation conditions.
 \subsubsection*{Dye removal}
 The same procedure was followed to remove unbound JF549 and Sytox Green dye. The cells were centrifuged for 3 min at 8000 rpm, the supernatant discarded, and the pellet resuspended in 1 mL of fresh medium and transferred to a new tube to avoid the dyes sticking to the plastic of the tube. This procedure was repeated 3 times to fully remove unbound dye. The cells were finally resuspended in 200 µL medium.
 \subsubsection*{Gam overexpression}
@@ -37,7 +37,7 @@ We improved a self-supervised denoising neural network by making it use the prev
 \paragraph{Cell segmentation}
 The 16-image brightfield Z-stack was first cropped to 5 images on one side of the focus, as required by our segmentation algorithm. The 5-image stack was used as input to Talissman, a U-net-based segmentation algorithm. In brief, the U-net model predicts a Euclidean distance map, where the value of each pixel is its predicted distance to the nearest background pixel. A watershed algorithm is then applied to retrieve cell contours. This approach allowed us to accurately segment cells from bright-field images, including when they formed tight clusters. Any overlapping cells were manually removed from the analysis. Following segmentation, post-filters were applied to dilate the segmented regions slightly and to remove any cells that were in contact with the edge of the image and might, therefore, be cropped. Finally, all segmentation masks were visually inspected and curated to remove cells that were incorrectly segmented ($\sim$1\% of total cells).
 
-\paragraph*{Detection of RecB spots}
+\paragraph*{Detection of RecB-Halo spots}
 Fluorescent spots were seg\-men\-ted using a seeded watershed algorithm on the Laplacian transform of the denoised RecB image. The quality of the segmentation was visually assessed by overlaying the segmentation mask on the raw fluorescence images. The segmentation parameters were optimised by trial-and-error to minimise the error rate (assessed by visual inspection of raw fluorescence images overlaid with the segmentation masks), but no manual curation was applied to avoid introducing user bias in the results.
 
 \paragraph*{Classification of RecA structures}
@@ -57,13 +57,13 @@ As the final step of the pipeline, BACMMAN performed several measurements on the
 \paragraph*{Data import and format}
 The PyBerries package, combined with the pandas library, allowed to easily import the multiple CSV tables produced by BACMMAN, and perform operations such as grouping, aggregations, normalisation and curve fitting.
 
-\paragraph*{Fitting RecB spot lifetimes}
+\paragraph*{Fitting Halo-RecB spot lifetimes}
 The lifetime of individual Rec\-B spots was computed in BACMMAN. The resulting lifetime histogram was fitted with a bi-exponential decay function of the type $y=a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$. To improve the reliability of the fits, a bootstrapping procedure was used. For each ciprofloxacin concentration, an array of RecB spot lifetimes of the same size as the original data was drawn with replacement (i.e. each lifetime could potentially be drawn several times), and the resulting histogram was fitted with the bi-exponential decay model. This procedure was repeated 100 times, yielding 100 different estimates for each fit parameter. The best fit parameter was obtained by taking the median of all estimates.
 
 Because it is not possible to differentiate whether the disappearance of a fluorescent spot was a result of photobleaching or of unbinding and returning to the pool of diffusing molecules, we considered that the fitted "spot disappearance rates" $k_1$ and $k_2$ were a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
 
 \paragraph*{Estimation of the rate of RecB recruitment to DSBs}
-For each timelapse, we quantified the total number of RecB spots that were bound to DSBs. This could not be achieved by thresholding on the lifetime histograms, as a significant number of short-lived spots correspond to DSB-bound RecB molecules. To estimate the total number of DSB-bound RecB, we considered that all RecB spots that disappeared with a slower rate (as determined by the bi-exponential decay fit) were DSB-bound. We multiplied the total number of spots that appeared during the timelapse by the proportion of slow-dissociating spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DSB-bound RecB per timelapse, from which a number of recruitment events per cell per hour was calculated. This rate was corrected for photobleaching of the fluorescent dye, to account for non-fluorescent RecBCD complexes binding to DSBs. This was done independently for each dataset, by computing the average proportion of the remaining initial fluorescence over time. The number of RecB binding events recorded was divided by this average proportion of fluorescence to estimate the real number of RecB binding events. For example: for 2 RecB recruitments per cell per hour observed, and an average of 50\% of the initial fluorescence remaining over the timelapse, the estimated number of RecB recruitments per cell per hour would be $2/0.5 = 4$. This estimation method assumes that RecB binding events are equally likely at all points of the timelapse.
+For each timelapse, we quantified the total number of RecB spots that were bound to DSBs. This could not be achieved by thresholding on the lifetime histograms, as a significant number of short-lived spots may correspond to DSB-bound RecB molecules. To estimate the total number of DSB-bound RecB, we considered that all RecB spots that disappeared with a slower rate (as determined by the bi-exponential decay fit) were DSB-bound. We multiplied the total number of spots that appeared during the timelapse by the proportion of slow-dissociating spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DSB-bound RecB per timelapse, from which a number of recruitment events per cell per hour was calculated. This rate was corrected for photobleaching of the fluorescent dye, to account for non-fluorescent RecBCD complexes binding to DSBs. This was done independently for each dataset, by computing the average proportion of the remaining initial fluorescence over time. The number of RecB binding events recorded was divided by this average proportion of fluorescence to estimate the real number of RecB binding events. For example: for 2 RecB recruitments per cell per hour observed, and an average of 50\% of the initial fluorescence remaining over the timelapse, the estimated number of RecB recruitments per cell per hour would be $2/0.5 = 4$. This estimation method assumes that RecB binding events are equally likely at all points of the timelapse.
 
 \subsection*{Code availability}
 Instructions to install the BACMMAN ImageJ plugin can be found on the \href{https://github.com/jeanollion/bacmman/wiki/Installation}{BACMMAN wiki}. The deep-learning models used for cell segmentation, fluorescence denoising and RecA structure classification can be found in BACMMAN's deep-learning models library. To access the library, in BACMMAN go to the Import/Export menu and select Online DL Model library. Under Username enter "el-karoui-lab", leave the password field empty and click on Connect. The models can be found in the "Thedie-et-al" folder. BACMMAN dataset configurations can be found in the \href{https://github.com/jeanollion/bacmman/wiki/Online-Configuration-Library}{BACMMAN configuration library}. To access the library, in BACMMAN go to the Import/Export menu and select Online Configuration Library. Under Username enter "el-karoui-lab", leave the password field empty and click on Connect. The configurations can be found in the "Thedie-et-al" folder. The PyBerries package can be found on the \href{https://pypi.org/project/PyBerries/}{Python Package Index}, and its source code is available on \href{https://gitlab.com/MEKlab/pyberries}{Gitlab}. The deep-learning model used to classify cells according to their RecA-associated fluorescence is available on \href{https://gitlab.com/MEKlab/bacmman-object-classifier}{Gitlab}. The Jupyter Notebooks used to make the article figures are available on \href{https://github.com/DanielThedie/RecB_article}{Github}.
