Minor typo corrections

--- a/Article.tex
+++ b/Article.tex
@@ -34,7 +34,7 @@
 
 \affil[1]{Institute of Cell Biology, University of Edinburgh, Edinburgh, UK}
 \affil[2]{Laboratory for Optics and Biosciences, \'Ecole Polytechnique, Institut Polytechnique de Paris, Palaiseau, France}
-\affil[3]{Laboratoire de Biologie et Pharmacologie Appliquée, CNRS,Ecole Normale Supérieure Paris-Saclay, UMR 8113, Gif-sur-Yvette, France}  % ENS Saclay, to be checked by Meriem
+\affil[3]{Laboratoire de Biologie et Pharmacologie Appliquée, CNRS,Ecole Normale Supérieure Paris-Saclay, UMR 8113, Gif-sur-Yvette, France}
 
 \maketitle
 
