--- a/Methods.tex
+++ b/Methods.tex
@@ -10,9 +10,9 @@ For all experiments, the cells were grown in M9 supplemented with 0.2\% (w/v) gl
 Cells were grown overnight from a -80\celsius\ glycerol stock in 5 mL medium at 37\celsius, shaking at 150 rpm. In the morning, the cells were diluted 1:300 into 15 mL of medium and grown at 37\celsius, shaking at 150 rpm until they reached an \od\ of 0.2-0.3 (mid-exponential phase).
 Alternatively, a 15 mL culture was inoculated using a -80\celsius\ glycerol stock, and placed at 37\celsius\ with stirring in a turbidostat device (OGIBio), which measured \od\ and diluted cells at 3 min intervals, to keep them at a constant \od\ of 0.2.
 \subsubsection*{Halo labelling}
-We used a labelling protocol similar to our previous study \cite{Lepore2023}. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
+We used a labelling protocol similar to our previous study \cite{Lepore2025}. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
 \subsubsection*{DNA labelling}
-When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen, catalog number S7020) at a concentration of 500 nM, at the same time as the JF549 dye using similar incubation conditions.
+When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen, catalog number S7020) at a concentration of 500 nM, at the same time as the JF549 dye using similar incubation conditions (1h at 37\celsius\ in the dark, shaking at 150 rpm).
 \subsubsection*{Dye removal}
 The same procedure was followed to remove unbound JF549 and Sytox Green dye. The cells were centrifuged for 3 min at 8000 rpm, the supernatant discarded, and the pellet resuspended in 1 mL of fresh medium and transferred to a new tube to avoid the dyes sticking to the plastic of the tube. This procedure was repeated 3 times to fully remove unbound dye. The cells were finally resuspended in 200 µL medium.
 \subsubsection*{Gam overexpression}
