--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -303,7 +303,7 @@
    month = {1},
    pages = {430-438},
    pmid = {9029161},
-   publisher = {John Wiley & Sons, LtdChichester, UK},
+   publisher = {John Wiley \& Sons, LtdChichester, UK},
    title = {DNA double‐strand breaks caused by replication arrest},
    volume = {16},
    url = {https://www.embopress.org/doi/10.1093/emboj/16.2.430},
@@ -367,7 +367,7 @@
    journal = {Photochemistry and Photobiology},
    month = {8},
    pages = {93-105},
-   publisher = {John Wiley & Sons, Ltd},
+   publisher = {John Wiley \& Sons, Ltd},
    title = {Degradation of the DNA of Escherichia coli K12 rec- (JC1569b) after irradiation with ultraviolet light},
    volume = {8},
    url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1751-1097.1968.tb05850.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1751-1097.1968.tb05850.x https://onlinelibrary.wiley.com/doi/10.1111/j.1751-1097.1968.tb05850.x},
@@ -541,7 +541,7 @@
    month = {8},
    pages = {1074-1085},
    pmid = {16091045},
-   publisher = {John Wiley & Sons, Ltd},
+   publisher = {John Wiley \& Sons, Ltd},
    title = {Localization of RecA in Escherichia coli K-12 using RecA–GFP},
    volume = {57},
    url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1365-2958.2005.04755.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2958.2005.04755.x https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2958.2005.04755.x},
@@ -698,7 +698,7 @@
    month = {1},
    pages = {103-115},
    pmid = {17163974},
-   publisher = {John Wiley & Sons, Ltd},
+   publisher = {John Wiley \& Sons, Ltd},
    title = {DinI and RecX modulate RecA–DNA structures in Escherichia coli K-12},
    volume = {63},
    url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1365-2958.2006.05496.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2958.2006.05496.x https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2958.2006.05496.x},
@@ -1034,4 +1034,20 @@ The authors have declared no competing interest.},
    volume = {13},
    url = {https://elifesciences.org/reviewed-preprints/94918},
    year = {2024}
+}
+@article{Lepore2025,
+   abstract = {Efficient DNA repair is essential for maintaining genome integrity and ensuring cell survival. In Escherichia coli, RecBCD plays a crucial role in processing DNA ends, following a DNA double-strand break (DSB), to initiate repair. While RecBCD has been extensively studied in vitro, less is known about how it contributes to rapid and efficient repair in living bacteria. Here, we use single-molecule microscopy to investigate DNA repair in real time in E. coli. We quantify RecB single-molecule mobility and monitor the induction of the DNA damage response (SOS response) in individual cells. We show that RecB binding to DNA ends caused by endogenous processes leads to efficient repair without SOS induction. In contrast, repair is less efficient in the presence of exogenous damage or in a mutant strain with modified RecB activities, leading to high SOS induction. Our findings reveal how subtle alterations in RecB activity profoundly impact the efficiency of DNA repair in E. coli.},
+   author = {Alessia Lepore and Daniel Thédié and Lorna Mclaren and Louise Goossens and Benura Azeroglu and Oliver J. Pambos and Achillefs N. Kapanidis and Meriem El Karoui},
+   doi = {10.1093/NAR/GKAF454},
+   issn = {13624962},
+   issue = {10},
+   journal = {Nucleic Acids Research},
+   month = {5},
+   pages = {454},
+   pmid = {40464683},
+   publisher = {Oxford Academic},
+   title = {In vivo single-molecule imaging of RecB reveals efficient repair of DNA damage in Escherichia coli},
+   volume = {53},
+   url = {https://dx.doi.org/10.1093/nar/gkaf454},
+   year = {2025}
 }
